@@ -50,6 +50,7 @@ import java.awt.event.WindowEvent;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Enumeration;
 import java.util.Hashtable;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -103,6 +104,8 @@ import xmipp.utils.XmippDialog;
 import xmipp.utils.XmippFileChooser;
 import xmipp.utils.XmippLabel;
 import xmipp.utils.XmippMenuBarCreator;
+import xmipp.utils.XmippMenuCreator;
+import xmipp.utils.XmippMessage;
 import xmipp.utils.XmippPopupMenuCreator;
 import xmipp.utils.XmippQuestionDialog;
 import xmipp.utils.XmippResource;
@@ -176,7 +179,7 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 	protected static final float MAX_HEIGHT_RATE = 2.0f / 3.0f;
 	// this rate is width/height
 	protected static final float DIM_RATE = 4.0f / 3.0f;
-	protected static final int MIN_WIDTH = 600;
+	protected static final int MIN_WIDTH = 650;
 	protected static int MIN_HEIGHT;
 	protected static int MAX_HEIGHT;
 	protected static int MAX_WIDTH;
@@ -187,6 +190,12 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 	GalleryData data;
 	private ExtractPickerJFrame extractframe;
 	private ButtonGroup reslicegroup;
+
+	private JComboBox imagecolumnscb;
+
+	private JMenuItem rendercolumnmi;
+
+	private Hashtable<String, ColumnInfo> imagecolumns;
 	/** Some static initialization for fancy default dimensions */
 	static
 	{
@@ -198,7 +207,6 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 		aux = (float) MAX_HEIGHT * DIM_RATE;
 		MAX_WIDTH = Math.round(aux);
 	}
-
 
 	/** Initialization function after GalleryData structure is created */
 	private void init(GalleryData data)
@@ -349,7 +357,8 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 		c.weightx = 1.0;
 		c.weighty = 1.0;
 		container.add(jspContent, c);
-
+		
+				
 		// Create the menu for table
 		menu = new GalleryMenu();
 		setJMenuBar(menu.getMenuBar());
@@ -537,7 +546,7 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 			@Override
 			public void keyPressed(KeyEvent arg0)
 			{
-				int dir = 0;
+				int vdir = 0, hdir = 0;
 
 				switch (arg0.getKeyCode())
 				{
@@ -545,17 +554,25 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 					removeObjects(true);
 					break;
 				case KeyEvent.VK_UP:
-					dir = -1;
+					vdir = -1;
 					break;
 				case KeyEvent.VK_DOWN:
-					dir = 1;
+					vdir = 1;
+					break;
+				case KeyEvent.VK_LEFT:
+					hdir = -1;
+					break;
+				case KeyEvent.VK_RIGHT:
+					hdir = 1;
 					break;
 				}
-				if (dir != 0)
+				if (vdir != 0 || hdir != 0)
 				{
-					int newRow = table.getSelectedRow() + dir;
-					if (newRow >= 0 && newRow <= table.getRowCount() - 1)
-						selectIndex(newRow);
+					int newRow = table.getSelectedRow() + vdir;
+					int col = table.getSelectedColumn() + hdir;
+
+					selectItem(newRow, col);
+
 				}
 			}// function keyPressed
 		});
@@ -681,10 +698,14 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 		public String message;
 		/** Constructor selecting operation */
 		private int op; // store operation
+		private MetaData imagesmd;
 
-		public Worker(int operation)
+		public Worker(int operation, MetaData imagesmd)
 		{
 			op = operation;
+			this.imagesmd = imagesmd;
+			if (imagesmd.findObjects().length == 0)
+				throw new IllegalArgumentException("No images available");
 		}
 
 		public void run()
@@ -694,15 +715,16 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 				switch (op)
 				{
 				case STATS:
-					computeStatsImages();
+					computeStatsImages(imagesmd);
 					break;
 				case PCA:
-					pca();
+					pca(imagesmd);
 					break;
 				case FSC:
-					fsc();
+					fsc(imagesmd);
 					break;
 				}
+				imagesmd.destroy();
 			}
 			catch (Exception e)
 			{
@@ -733,19 +755,20 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 	/** Function to create and launch the worker, blocking the gui */
 	public void runInBackground(int operation)
 	{
-		Worker w = new Worker(operation);
+
+		MetaData imagesmd = data.getImagesMd();
+		Worker w = new Worker(operation, imagesmd);
 		XmippWindowUtil.blockGUI(this, w.getMessage());
 		Thread thr = new Thread(w);
 		thr.start();
+
 	}
 
-	private void computeStatsImages() throws Exception
+	private void computeStatsImages(MetaData imagesmd) throws Exception
 	{
 		ImageGeneric imgAvg = new ImageGeneric();
 		ImageGeneric imgStd = new ImageGeneric();
-		MetaData imagesmd = data.getImagesMd(data.getRenderLabel());
-		if (imagesmd.findObjects().length == 0)
-			throw new IllegalArgumentException("No images available");
+
 		imagesmd.getStatsImages(imgAvg, imgStd, data.useGeo, data.getRenderLabel());
 		ImagePlus impAvg = XmippImageConverter.convertToImagePlus(imgAvg);
 		ImagePlus impStd = XmippImageConverter.convertToImagePlus(imgStd);
@@ -779,12 +802,9 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 		return filename.substring(0, dot) + ext;
 	}
 
-	public void pca() throws Exception
+	public void pca(MetaData imagesmd) throws Exception
 	{
 		ImageGeneric image = new ImageGeneric();
-		MetaData imagesmd = data.getImagesMd(data.getRenderLabel());
-		if (imagesmd.findObjects().length == 0)
-			throw new IllegalArgumentException("No images available");
 		imagesmd.getPCAbasis(image, data.getRenderLabel());
 		ImagePlus imp = XmippImageConverter.convertToImagePlus(image);
 		imp.setTitle("PCA: " + data.getFileName());
@@ -793,10 +813,9 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 
 	}
 
-	public void fsc() throws Exception
+	public void fsc(MetaData imagesmd) throws Exception
 	{
-
-		FSCJFrame frame = new FSCJFrame(data);
+		FSCJFrame frame = new FSCJFrame(data, imagesmd);
 		XmippWindowUtil.centerWindows(frame, this);
 		frame.setVisible(true);
 	}
@@ -858,14 +877,13 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 		reloadTableData(true);
 	}
 
-
 	/** Reload table data */
 	public void reloadTableData(boolean changed)
 	{
 		try
 		{
 			DEBUG.printMessage("reloadTableData...");
-			if(table != null)
+			if (table != null)
 				table.removeAll();
 			createModel();
 			// gallery.setShowLabels(menu.getShowLabel());
@@ -880,9 +898,9 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 
 			setGalleryTitle();
 
-			if(rows != null)
+			if (rows != null)
 				gallery.setRows(rows);
-			if(columns != null)
+			if (columns != null)
 				gallery.setColumns(columns);
 
 		}
@@ -970,15 +988,16 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 			boolean overwrite;
 			String path = dlg.getMdFilename();
 			String file = path.substring(path.lastIndexOf("@") + 1, path.length());
-			if (!new File(file).exists())//overwrite or append, save selection
+			if (!new File(file).exists())// overwrite or append, save selection
 				md.write(path);
 			else
 			{
 				overwrite = dlg.isOverwrite();
 				if (overwrite)
-					md.write(path);//overwrite with active block only, other blocks were dismissed
+					md.write(path);// overwrite with active block only, other
+									// blocks were dismissed
 				else
-					md.writeBlock(path);//append selection
+					md.writeBlock(path);// append selection
 
 			}
 		}
@@ -1051,7 +1070,7 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 		jlGoToImage.setToolTipText(XmippLabel.LABEL_GOTO_ITEM);
 		toolBar.add(jlGoToImage);
 
-		if(gallery.getSize() > 0)
+		if (gallery.getSize() > 0)
 			jsGoToImage.setValue(1);
 
 		jsGoToImage.addChangeListener(new javax.swing.event.ChangeListener()
@@ -1105,8 +1124,7 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 		toolBar.add(jsRows);
 
 		// Some settings of the spinners
-		initResliceButtonMenu();
-		toolBar.add(reslicebt);
+
 		if (gallery.getSize() > 0)
 		{
 
@@ -1137,7 +1155,6 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 			cbPanel.add(jlBlocks);
 			jcbBlocks.setModel(new ComboBoxModel()
 			{
-
 
 				@Override
 				public int getSize()
@@ -1243,6 +1260,9 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 			}
 		});
 		cbPanel.add(jcbVolumes);
+		
+		initResliceButtonMenu();
+		cbPanel.add(reslicebt);
 	}
 
 	protected void updateCombos()
@@ -1275,7 +1295,7 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 			columns = (Integer) jsColumns.getValue();
 			rows = null;
 			gallery.setColumns(getLastColums());
-			
+
 		}
 	}
 
@@ -1311,11 +1331,22 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 		}
 	}
 
-	public void selectIndex(int index)
+	public void selectItem(int row, int col)
 	{
+		if (row < 0 || row > table.getRowCount() - 1 || col < 0 || col > table.getColumnCount() - 1)
+			return;
+		if (row * table.getColumnCount() + col + 1 > gallery.getSize())
+		{
+			int[] coords = gallery.getCoords(gallery.getSize() - 1);
+			row = coords[0];
+			col = coords[1];
+
+		}
+
 		gallery.clearSelection();
-		gallery.touchItem(index, 0);
-		makeVisible(index);
+		gallery.touchItem(row, col);
+		makeVisible(row);
+
 	}
 
 	private void tableMouseClicked(MouseEvent evt)
@@ -1441,8 +1472,8 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 			addItem(FILE_OPEN, "Open ...", null, "control released O");
 			addItem(FILE_OPENWITH_IJ, "Open with ImageJ", "ij.gif", "control released J");
 			addItem(FILE_OPENWITH_CHIMERA, "Open with Chimera", "chimera.gif", "control released H");
-
 			addItem(FILE_OPENMICROGRAPHS, "Open Particle Micrographs");
+			addItem(FILE_INFO, "File info ...");
 
 			addSeparator(FILE);
 			addItem(FILE_SAVE, "Save", "save.gif", "control released S");
@@ -1453,9 +1484,13 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 			// Display
 			addItem(DISPLAY, "Display");
 			addItem(DISPLAY_NORMALIZE, "Global normalization", null, "control released N");
-			addItem(DISPLAY_SHOWLABELS, "Show labels", null, "control released L");
+			addItem(DISPLAY_SHOWLABELS, "Display labels", null, "control released L");
 			addSeparator(DISPLAY);
 			addItem(DISPLAY_RENDERIMAGES, "Render images", null, "control released R");
+			
+			addRenderImageColumnItem();
+			
+		
 			addItem(DISPLAY_APPLYGEO, "Apply geometry", null, "control released G");
 			addItem(DISPLAY_WRAP, "Wrap", null, "control released W");
 			addItem(DISPLAY_COLUMNS, "Columns ...", "columns.gif");
@@ -1542,6 +1577,7 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 					gallery.setRenderImages(getItemSelected(DISPLAY_RENDERIMAGES));
 					makeVisible(gallery.getFirstSelectedIndex());
 				}
+				
 				else if (cmd.equals(DISPLAY_COLUMNS))
 				{
 					ColumnsJDialog dialog = new ColumnsJDialog(GalleryJFrame.this);
@@ -1590,10 +1626,12 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 					try
 					{
 						String args = data.selectedVolFn;
-						if (Filename.isSpiderVolume(args))
-							args = "spider:" + args;
-						// FIXME: Check chimera is installed
-						Process p = new ProcessBuilder("chimera", args).start();
+						// if (Filename.isSpiderVolume(args))
+						// args = "spider:" + args;
+						// // FIXME: Check chimera is installed
+						// Process p = new ProcessBuilder("chimera",
+						// args).start();
+						Runtime.getRuntime().exec("xmipp_chimera_client -i " + args);
 					}
 					catch (Exception ex)
 					{
@@ -1603,6 +1641,11 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 				else if (cmd.equals(FILE_OPENMICROGRAPHS))
 				{
 					openMicrographs();
+				}
+
+				else if (cmd.equals(FILE_INFO))
+				{
+					XmippDialog.showInfo(GalleryJFrame.this, data.getFileInfo());
 				}
 
 				else if (cmd.equals(FILE_OPENWITH_IJ))
@@ -1691,7 +1734,61 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 				showException(e);
 			}
 		}// function handleActionPerformed
-	}// class GalleryMenu
+		
+		
+		protected void addRenderImageColumnItem()
+		{                  
+			addItem(DISPLAY_RENDERIMAGECOLUMN, "Render Image Column");
+			JMenuItem mi;
+			
+			imagecolumns = new Hashtable<String, ColumnInfo>();
+			for (ColumnInfo column : data.getColumns())
+				if (column.allowRender)
+					imagecolumns.put(column.toString(), column);
+			boolean rendercolumn = imagecolumns.size() > 1;
+			setItemEnabled(DISPLAY_RENDERIMAGECOLUMN, rendercolumn);
+			if(rendercolumn)
+			{
+				// Create the popup menu.
+				String id, column;
+				Enumeration<String> keys = imagecolumns.keys();
+				while (keys.hasMoreElements())
+				{
+					column = keys.nextElement();
+					id = String.format("Display.RenderImagesColumn.%s_rb", column);
+					mi = addItem(id, column);
+					mi.addActionListener(new RenderColumnActionListener());
+					if(data.getRenderColumn().toString().equals(column))
+						setItemSelected(id, true);
+				}
+			}
+
+		}
+		
+		class RenderColumnActionListener implements ActionListener
+		{
+
+			@Override
+			public void actionPerformed(ActionEvent e)
+			{
+				JRadioButtonMenuItem mi = (JRadioButtonMenuItem)e.getSource();
+				String key = mi.getText();
+				data.setRenderColumn(imagecolumns.get(key));
+				reloadTableData();
+			}
+
+		}
+			
+	}// class GalleryMenu //////////////////////////////////////////////////////////
+	
+	
+	
+	
+	
+	
+	
+	
+	
 
 	class GalleryPopupMenu extends XmippPopupMenuCreator
 	{
@@ -1899,7 +1996,6 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 		XmippDialog.showInfo(this, String.format("Calculating ctf: DONE"));
 	}
 
-
 	private void saveMd() throws Exception
 	{
 		saveMd(dlgSave.getMdFilename());
@@ -1925,7 +2021,8 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 			File iofile = new File(file);
 			if (!iofile.exists())// overwrite or append, save active
 			{
-				iofile.getParentFile().mkdirs();
+				if (iofile.getParentFile() != null)
+					iofile.getParentFile().mkdirs();
 				data.md.write(path);
 			}
 			else
@@ -1946,13 +2043,13 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 			if (path.contains("@"))
 				gallery.data.selectBlock(path.substring(0, path.lastIndexOf("@")));
 			reloadFile(file, false);
+			setTitle(gallery.getTitle());
 		}
 		catch (Exception e)
 		{
 			e.printStackTrace();
 		}
 	}// function saveMd
-
 
 	private void saveAll() throws Exception
 	{
@@ -1973,7 +2070,7 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 			File file = new File(to);
 			if (dlgSave.isOverwrite())
 				file.delete();
-			if (!file.exists())
+			if (!file.exists() && file.getParentFile() != null)
 				file.getParentFile().mkdirs();
 			for (String blockit : data.mdBlocks)
 			{
@@ -1988,7 +2085,6 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 		}
 		saveMd(blockto);
 	}
-
 
 	private void save() throws Exception
 	{
@@ -2018,7 +2114,6 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 				data.md.writeImages(dlgSave.getOutput(), dlgSave.isOutputIndependent(), dlgSave.getImageLabel());
 		}
 
-		
 	}
 
 	public void openMicrographs()
@@ -2054,7 +2149,6 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 	{
 		return (String) jcbBlocks.getSelectedItem();
 	}
-
 
 	public void reloadFile(String file, boolean changed) throws Exception
 	{
@@ -2100,6 +2194,10 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 		});
 
 	}
+	
+	
+		
+	
 
 	class ResliceActionListener implements ActionListener
 	{
@@ -2118,11 +2216,27 @@ public class GalleryJFrame extends JFrame implements iCTFGUI
 	public Map<String, String> getKeyAssist()
 	{
 		Map<String, String> map = Collections.synchronizedMap(new LinkedHashMap<String, String>());
+		map.put("Shift + Scroll Up/Ctrl + P", "Zoom in if images displayed");
+		map.put("Shift + Scroll Down/Ctrl + O", "Zoom out if images displayed");
+		map.put("Left click", "Selects a cell in gallery mode and a row in table mode");
+		map.put("Right click", "Selects a row in table mode and displays row menu");
+		map.put("Supr", "Delete selected cell in gallery mode and row in table mode");
+		map.put("Up", "Select  previous row in table mode and cell in previous row in gallery mode");
+		map.put("Down", "Select next row in table mode and cell in next row in gallery mode");
+		map.put("Left", "Select  previous cell in gallery mode");
+		map.put("Right", "Select next cell in gallery mode");
+		map.put("Ctrl + O", "Open file");
+		map.put("Ctrl + J", "Open with ImageJ");
+		map.put("Ctrl + S", "Save");
+		map.put("F5", "Refresh");
+		map.put("Ctrl + Q", "Exit");
+		map.put("Ctrl + N", "Display global normalization");
+		map.put("Ctrl + L", "Display labels");
+		map.put("Ctrl + R", "Render images");
+		map.put("Ctrl + G", "Apply geometry");
+		map.put("Ctrl + W", "Wrap");
 
 		return map;
 	}
-
-	
-
 
 }// class JFrameGallery
